feat: add front tracker (#96)
