# generated/openapiv2/apidocs.swagger.json
@@ -346,7 +346,8 @@
               "deployment",
               "operation",
               "drift",
-              "incident"
+              "incident",
+              "rpa_usage"
             ],
             "default": "TYPE_UNSPECIFIED"
           },
@@ -677,7 +678,8 @@
         "deployment",
         "operation",
         "drift",
-        "incident"
+        "incident",
+        "rpa_usage"
       ],
       "default": "TYPE_UNSPECIFIED"
     },
@@ -715,6 +717,47 @@
         "updated_at": {
           "type": "string",
           "format": "date-time"
+        }
+      }
+    },
+    "v1alpha1ChangeType": {
+      "type": "string",
+      "enum": [
+        "CHANGE_TYPE_UNSPECIFIED",
+        "created",
+        "updated",
+        "status_changed",
+        "approved",
+        "rejected",
+        "commented",
+        "linked"
+      ],
+      "default": "CHANGE_TYPE_UNSPECIFIED"
+    },
+    "v1alpha1ChangelogEntry": {
+      "type": "object",
+      "properties": {
+        "timestamp": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "user": {
+          "type": "string"
+        },
+        "change_type": {
+          "$ref": "#/definitions/v1alpha1ChangeType"
+        },
+        "field": {
+          "type": "string"
+        },
+        "old_value": {
+          "type": "string"
+        },
+        "new_value": {
+          "type": "string"
+        },
+        "comment": {
+          "type": "string"
         }
       }
     },
@@ -858,6 +901,13 @@
         },
         "metadata": {
           "$ref": "#/definitions/v1alpha1EventMetadata"
+        },
+        "changelog": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1alpha1ChangelogEntry"
+          }
         }
       }
     },
