# generated/proto/event/v1alpha1/event.pb.validate.go
@@ -519,6 +519,147 @@ var _ interface {
 	ErrorName() string
 } = EventLinksValidationError{}
 
+// Validate checks the field values on ChangelogEntry with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *ChangelogEntry) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ChangelogEntry with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in ChangelogEntryMultiError,
+// or nil if none found.
+func (m *ChangelogEntry) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ChangelogEntry) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if all {
+		switch v := interface{}(m.GetTimestamp()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, ChangelogEntryValidationError{
+					field:  "Timestamp",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, ChangelogEntryValidationError{
+					field:  "Timestamp",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetTimestamp()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return ChangelogEntryValidationError{
+				field:  "Timestamp",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	// no validation rules for User
+
+	// no validation rules for ChangeType
+
+	// no validation rules for Field
+
+	// no validation rules for OldValue
+
+	// no validation rules for NewValue
+
+	// no validation rules for Comment
+
+	if len(errors) > 0 {
+		return ChangelogEntryMultiError(errors)
+	}
+
+	return nil
+}
+
+// ChangelogEntryMultiError is an error wrapping multiple validation errors
+// returned by ChangelogEntry.ValidateAll() if the designated constraints
+// aren't met.
+type ChangelogEntryMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ChangelogEntryMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ChangelogEntryMultiError) AllErrors() []error { return m }
+
+// ChangelogEntryValidationError is the validation error returned by
+// ChangelogEntry.Validate if the designated constraints aren't met.
+type ChangelogEntryValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ChangelogEntryValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ChangelogEntryValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ChangelogEntryValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ChangelogEntryValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ChangelogEntryValidationError) ErrorName() string { return "ChangelogEntryValidationError" }
+
+// Error satisfies the builtin error interface
+func (e ChangelogEntryValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sChangelogEntry.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ChangelogEntryValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ChangelogEntryValidationError{}
+
 // Validate checks the field values on Event with the rules defined in the
 // proto definition for this message. If any rules are violated, the first
 // error encountered is returned, or nil if there are no violations.
@@ -627,6 +768,40 @@ func (m *Event) validate(all bool) error {
 				cause:  err,
 			}
 		}
+	}
+
+	for idx, item := range m.GetChangelog() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, EventValidationError{
+						field:  fmt.Sprintf("Changelog[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, EventValidationError{
+						field:  fmt.Sprintf("Changelog[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return EventValidationError{
+					field:  fmt.Sprintf("Changelog[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
 	}
 
 	if len(errors) > 0 {
